spec/types/valid/each_type.js
export const payload  = {
  str:      'hello',
  int:      42,
  float:    3.14,
  bool:     true,
  null_val: null,
  any_val:  'anything',
  list:     [1, 2, 3],
  set:      ['a', 'b'],
  tuple:    [1, 'two'],
  obj:      { key: 'value' },
}
export const expected = []

